# Fundamentals-of-algorithmization-and-programming

./: check_hierarchy.py
353501/Иваненко К.С./Курсовая работа/: CMakeLists.txt  README.md  graphwidget.cpp  graphwidget.h  graphwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moveitem.cpp  moveitem.h  note.h  noteslistwidget.cpp  noteslistwidget.h  noteslistwidget.ui  notesmanager.cpp  notesmanager.h  notewidget.cpp  notewidget.h  renamedialog.cpp  renamedialog.h  renamedialog.ui  xlmstorage.cpp  xlmstorage.h
353501/Маслаков С.А./Курсовая работа/: CMakeLists.txt  ItemsContainer.cpp  ItemsContainer.h  Pepper.cpp  Pepper.h  README.md  SnakeAI.cpp  SnakeAI.h  SnakePart.cpp  SnakePart.h  Stone.cpp  Stone.h  database.cpp  database.h  food.cpp  food.h  leaderboardwindow.cpp  leaderboardwindow.h  leaderboardwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuwindow.cpp  menuwindow.h  menuwindow.ui  snake.cpp  snake.h
353501/Петухов М.Д./Курсовая работа/: Animal.cpp  Animal.h  Bear.cpp  Bear.h  CMakeLists.txt  CustomGraphicsScene.cpp  CustomGraphicsScene.h  Egg.cpp  Egg.h  Grass.cpp  Grass.h  README.md  dialog.cpp  dialog.h  dialog.ui  factory.cpp  factory.h  globals.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  product.cpp  product.h  rulesDialog.cpp  rulesDialog.h  rulesDialog.ui  widget.cpp  widget.h  widget.ui  winDialog.cpp  winDialog.h  winDialog.ui  xorshiftplus.cpp  xorshiftplus.h
353501/Петухов М.Д./Курсовая работа/resources/: fieldFinal.qrc
353501/Подгайский А.А./LabWork_7/Task_1/: CMakeLists.txt  List.h  Queue.h  Untitled-1.cpp  gtest.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Подгайский А.А./LabWork_7/Task_3/: CMakeLists.txt  HashTable.h  HashTableGui.h  hash_test.cpp  mainwindow.cpp
353501/Подгайский А.А./LabWork_7/Task_4/: CMakeLists.txt
353501/Подгайский А.А./LabWork_8/Task_3/: CMakeLists.txt  Map.h  RBTree.h  Set.h  bst_test.cpp  main.cpp  mainwindow.cpp  mainwindow.h
353501/Подгайский А.А./Курсовая работа/: CMakeLists.txt  README.md
353501/Подгайский А.А./Курсовая работа/src/: main.cpp  main_test.cpp  resources.qrc
353501/Романовский М.Д./LabWork_8/: CMakeLists.txt
353501/Романовский М.Д./LabWork_8/Task_1/: SearchTree.h  SearchTree_test.cpp  Solver.cpp  Solver.h  mainwindow.cpp  mainwindow.ui
353501/Романовский М.Д./LabWork_8/Task_2/: ArrayHeap.cpp  Heap.h  Heap_test.cpp  TreeHeap.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Романовский М.Д./LabWork_8/Task_3/: RBTree.h  RBTree_test.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Романовский М.Д./Курсовая работа/easycpu_cli/: Cargo.toml
353501/Романовский М.Д./Курсовая работа/easycpu_wasm/: Cargo.toml
353501/Снесарь Д.О./Курсовая работа/src/: CMakeLists.txt  clearButtonIcon.qrc  exitIcon.qrc  gamewidget.cpp  gamewidget.h  gamewidget.ui  generator.cpp  generator.h  ideaIcon.qrc  info.cpp  info.h  info.ui  main.cpp  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  menu.ui  menuLogo1.qrc  menuLogo2.qrc  notActiveStar.qrc  playBIcon.qrc  playTimerButtonIcon.qrc  questionIcon.qrc  randomLevels.qrc  randomLevels.txt  solver.cpp  solver.h  starIcon.qrc  tile.cpp  tile.h
353501/Федотов В.А./LabWork_6/: CMakeLists.txt
353501/Федотов В.А./LabWork_6/Task_1/: Song.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Федотов В.А./LabWork_6/Task_2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Федотов В.А./LabWork_7/: CMakeLists.txt
353501/Федотов В.А./LabWork_7/Task_1/: deque.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Федотов В.А./LabWork_7/Task_2/: bst.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  solver.h
353501/Федотов В.А./LabWork_7/Task_3/: hashmap.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  tasksolver.cpp  tasksolver.h
353501/Федотов В.А./LabWork_8/: CMakeLists.txt
353501/Федотов В.А./LabWork_8/Task_1/: AvlTree.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  solver.h
353501/Федотов В.А./Курсовая работа/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Федотов В.А./Курсовая работа/Cell/: cell.cpp  cell.h
353501/Федотов В.А./Курсовая работа/Enemy/: enemy.cpp  enemy.h
353501/Федотов В.А./Курсовая работа/Maze/: maze.cpp  maze.h
353501/Федотов В.А./Курсовая работа/Pathfinder/: pathfinder.cpp  pathfinder.h
353501/Федотов В.А./Курсовая работа/Player/: player.cpp  player.h
353501/Федотов В.А./Курсовая работа/Powerup/: basePowerup.cpp  basePowerup.h  powerupInvisible.cpp  powerupInvisible.h  powerupTeleport.cpp  powerupTeleport.h
353501/Федотов В.А./Курсовая работа/UI/: game.cpp  game.h  game.ui  menu.cpp  menu.h  menu.ui
353502/Бобченок М.П./LabWork_1/Task_1/: CMakeLists.txt
353502/Бобченок М.П./LabWork_1/Task_2/: CMakeLists.txt  main.cpp
353502/Бобченок М.П./LabWork_2/Task_1/: CMakeLists.txt
353502/Бобченок М.П./LabWork_2/Task_2/: CMakeLists.txt
353502/Бобченок М.П./LabWork_7/Task_3/: CMakeLists.txt  HashTable.h  Stack.h  TaskTable.h  main_window.cpp  main_window.h  main_window.ui
353502/Бобченок М.П./LabWork_7/Task_4/: CMakeLists.txt  HashTable.h  main_window.cpp  main_window.h  main_window.ui
353502/Бобченок М.П./LabWork_7/Task_5/: CMakeLists.txt  Deque.h  main.cpp  main_window.cpp  main_window.h  main_window.ui
353502/Бобченок М.П./LabWork_8/Task_1/: CMakeLists.txt  Treap.h  main.cpp  main_window.cpp  main_window.h  main_window.ui
353502/Бобченок М.П./LabWork_8/Task_2/: CMakeLists.txt  main_window.cpp  main_window.h  main_window.ui
353502/Бобченок М.П./Курсовая работа/: CMakeLists.txt  README.md  main.cpp
353502/Бобченок М.П./Курсовая работа/Network/: Network.cpp  Network.h
353502/Бобченок М.П./Курсовая работа/developersMenu/: Menu.cpp  Menu.h
353502/Бобченок М.П./Курсовая работа/settings/: paths.h
353502/Бобченок М.П./Курсовая работа/userInterface/: main_window.cpp  (+2 more)
353502/Гнидин В.В./Курсовая работа/: CMakeLists.txt  README.md  main.cpp
353502/Петроченко М.М./Курсовая работа/: CMakeLists.txt  README.md
353503/Мельник Д.И./LabWork_5/: CMakeLists.txt
353503/Мельник Д.И./LabWork_6/: CMakeLists.txt
(+7435 files in other folders)
