[package]
name = "easycpu_cli"
version = "0.1.0"
edition = "2021"
default-run = "easycpu_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
easycpu_lib = { path = "../easycpu_lib" }